# health-data-pipeline

./: .gitignore  README.md
.github/: SECRETS.md
.github/workflows/: ci.yml  deploy.yml  security.yml  terraform.yml
data/synthea_sample_data_fhir_latest/: Abdul218_Nienow652_1754bc7d-28cd-4933-fc72-3d9a0d77cf54.json  Adela471_Latashia561_Barrows492_f380d818-b685-618e-22dc-b2db2fe0a6c0.json  Adrian111_Feest103_74a4cdcf-7cc0-7658-e1e0-cd1182d5f205.json  Agustin437_Rosenbaum794_72b7a6b1-b196-7ba5-eb82-1e9b0f75b7bd.json  Alden634_Bogisich202_49424eb4-e2ba-40b5-0e2b-2c2d742cce4b.json  Ali918_Dickens475_a331b5bc-cbea-a205-a8bf-dbf3255ef36a.json  Alonso270_Luettgen772_ae05f1fa-7913-f7bc-41bd-2dc8827555e7.json  Amelia635_Bode78_b427e4ea-3a48-207a-bf7d-710f0b574091.json  Ana_Luisa894_Santana368_6754b3bf-f5ac-f359-fef6-87cf4b8508ab.json  Annalisa973_Susy776_Glover433_103b63c9-9ef8-6d25-771e-2fba661489a1.json  August363_Baumbach677_6f808eef-a811-11eb-3fcb-1ed910d79c4b.json  (+89 more)
services/measures/: .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
services/measures/src/: cqlExecutor.example.js  cqlExecutor.js  cqlExecutor.test.js  index.js  index.test.js
services/measures/tests/resources/measures/: monitor_depression_symptoms.cql
services/terminology/: .env.sample  pyproject.toml
services/terminology/src/terminology/: vsac.py
services/terminology/tests/: conftest.py  test_get_valuesets.py  test_vsac.py
services/terminology/tests/resources/value_sets/: valueset_list.cql  vital_signs.json
terraform/: README.md  backend.tf.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
