[tool.poetry]
name = "clinical-measures"
version = "0.1.0"
description = ""
authors = ["Tom Wilson <twilson650@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
cql-parser = "^1.0.2"
fhirpathpy = "^2.1.0"
antlr4-python3-runtime = "^4.13.2"
antlr4-tools = "^0.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
